syntax = "proto3";

package hrpb;

service HrService {
  rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse) {}
  rpc CreateDepartment(CreateDepartmentRequest) returns (CreateDepartmentResponse) {}
  rpc SuspendEmployee(SuspendEmployeeRequest) returns (SuspendEmployeeResponse) {}
  rpc SackEmployee(SackEmployeeRequest) returns (SackEmployeeResponse) {}
  rpc UnsuspendEmployee(UnsuspendEmployeeRequest) returns (UnsuspendEmployeeResponse) {}
  rpc GetEmployeeById(GetEmployeeRequest) returns (GetEmployeeResponse) {}
//  rpc GetAllEmployees(GetAllEmployeesRequest) returns (GetAllEmployeesResponse) {}
//  rpc GetEmployeeByDepartment(GetEmployeeByDepartmentRequest) returns (GetEmployeeByDepartmentResponse) {}
//  rpc GetEmployeesByGender(GetEmployeesByGenderRequest) returns (GetEmployeesByGenderResponse) {}
}

message CreateDepartmentRequest {
  Department department = 1;
}

message CreateDepartmentResponse {
  string id = 1;
}

message CreateEmployeeRequest {
  Employee employee = 1;

}
message  CreateEmployeeResponse {
  string id = 1;
}
message SuspendEmployeeRequest {
  string id = 1;
  string reason = 2;
  string duration = 3;
}
message SuspendEmployeeResponse {
  bool success = 1;
}
message UnsuspendEmployeeRequest {
  string id = 1;
}
message UnsuspendEmployeeResponse {
  bool success = 1;
}
message SackEmployeeRequest {
  string id = 1;
  string reason = 2;
}
message SackEmployeeResponse {
  bool success = 1;
}
message GetEmployeeRequest {
  string id = 1;
}
message GetEmployeeResponse {
  Employee employee = 1;
}

message Department {
  string id = 1;
  string name = 2;
  string head_of_department = 3;
  int32 number_of_employees = 4;
  int32 budget = 5;
}

message Project {
  string id = 1;
  string dept_id = 2;
  string name = 3;
  string duration = 4;
  int32 number_of_employees = 5;
  int32  budget = 6;
  string resources = 7;
}
message Employee{
  string id = 1;
  string first_name = 2;
  string middle_name = 3;
  string last_name = 4;
  string gender = 5;
  string email = 6;
  string date_of_birth = 7;
  string home_address = 8;
  string phone_number = 9;
  string bank = 10;
  string account_number = 11;
  int32 gross_salary = 12;
  string next_of_kin_name = 13;
  string next_of_kin_phone = 14;
  string reference_name = 15;
  string reference_phone = 16;
  string dept_id  = 17;
  string country = 18;
  bool suspended = 19;
  string suspension_reason = 20;
  string suspension_duration = 21;
  bool sacked = 22;
  string sacked_reason = 23;
  string password = 24;
}